Se modifico el archivo js añadiendo dentro de el la funcion para ir mostrando dinamicamente los modelos de la marca que se seleccione mediante el boton implementando lo suguerido en el plan de estudios

--- a/carros.html
+++ b/carros.html
@@ -16,6 +16,6 @@
             <button onclick="mostrarModelos('audi')">Audi</button>
         </div>
         <div id="modelos"></div>
-        <script> src="carros.js"</script>
+        <script src="carros.js"></script>
     </body>
 </html>
