Se añadieron las divisiones y botones para mostrat los promedios de los precios generales y por marca asi como desde el js se va creando la division para las imagenes

--- a/carros.html
+++ b/carros.html
@@ -26,8 +26,18 @@
             <button onclick="filtrarPorTipo('Estandar')"> Estándar</button>
             <button onclick="filtrarPorTipo('Eléctrico')"> Eléctrico</button>
             <button onclick="mostrarTodos()"> Mostrar todos</button>
+            <button onclick="mostrarPromedios()"> Mostrar promedios de precios</button>
+
+
         </div>
         <div id="modelos"></div>
+
+        <div id="promedios"> 
+        <h2>Promedios de Precios</h2>
+        <p id="promedioGeneral"></p>
+        <div id="promediosPorMarca"></div>
+        </div>
+
         <script src="carros.js"></script>
     </body>
 </html>
